# ideation-loop

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  seed.example.json
.github/workflows/: ci.yml
seeds/: ai-grad-student-science.json  ai-learning-curves.json  anthropic-ai-grad-student.json  anthropic-australia-usage.json  anthropic-functional-emotions.json  anthropic-learning-curves.json  anthropic-scientific-computing.json  australia-claude-adoption.json  coding-agent-adoption.json  conversational-product-discovery.json  functional-emotion-alignment.json  interactive-learning-retention.json  legible-model-behavior.json  scientific-computing-agents.json  teen-safe-ai-ux.json
states/: ai-learning-overreliance.json  anthropic-ai-grad-student.json  anthropic-australia-usage.json  anthropic-functional-emotions.json  anthropic-learning-curves.json  anthropic-scientific-computing.json  coding-agent-adoption.json  conversational-product-discovery.json  cross-lingual-cot-trust.json  dhh-agent-first-software-craft.json  improvisational-theatre.json  interactive-learning-retention.json  king-in-yellow-rpg.json  legible-model-behavior.json  space-colonization.json  starship-orbital-economy.json  teen-safe-ai-ux.json
