[project]
name = "ideation-loop"
version = "0.1.0"
description = "Minimal OpenAI-backed ideation and exploration loop runner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[tool.uv]
package = false
